[project]
name = "diffusion-scratch"
version = "0.1.0"
description = "A conditional diffusion model implemented from scratch."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "tqdm", # For progress bars
    "matplotlib", # For plotting results
    "pillow", # For image handling
    "tensorboard", # (Optional) For tracking training loss
    "ipython>=8.37.0",
    "einops>=0.8.1",
]

[tool.uv]
# This section allows you to pin specific versions if needed for reproducibility